@@ -90,38 +90,43 @@ public class VersionNumberTest {
         assertLessThan("1.99999999999999999999", "1.199999999999999999999");
         assertLessThan("1.99999999999999999999", "2");
         assertLessThan("1.99999999999999999999", "2.0");
+        assertLessThan("1.0-zzz", "1.0");
+        assertLessThan("1.0-beta.1", "1.0");
+        assertLessThan("1.0-alpha.1", "1.0-beta.1");
     }
 
     @Test
     public void testSorting() {
         final Comparator<String> comparator = ((Comparator<String>) VersionNumber::compare).thenComparing(String::compareTo);
-        final List<String> input = Collections.unmodifiableList(Arrays.asList(
+        final List<String> input = List.of(
                 "0",
                 "0.10.0",
-                "1.6.4",
                 "1.6.4-Forge9.11.1.1345",
-                "1.7.10",
+                "1.6.4",
                 "1.7.10Agrarian_Skies_2",
                 "1.7.10-F1614-L",
                 "1.7.10-FL1614_04",
                 "1.7.10-Forge10.13.4.1614-1.7.10",
-                "1.7.10-Forge1614",
                 "1.7.10Forge1614_FTBInfinity-2.6.0",
                 "1.7.10Forge1614_FTBInfinity-3.0.1",
+                "1.7.10-Forge1614",
                 "1.7.10-Forge1614.1",
                 "1.7.10forge1614_ATlauncher",
-                "1.7.10forge1614_FTBInfinity",
                 "1.7.10forge1614_FTBInfinity_server",
+                "1.7.10forge1614_FTBInfinity",
                 "1.7.10forge1614test",
-                "1.7.10-1614",
+                "1.7.10",
                 "1.7.10-1614-test",
-                "1.8",
+                "1.7.10-1614",
                 "1.8-forge1577",
-                "1.8.9",
+                "1.8",
                 "1.8.9-forge1902",
+                "1.8.9",
                 "1.9",
+                "1.10-alpha.2",
+                "1.10-beta.1",
+                "1.10-beta.2",
                 "1.10",
-                "1.10.2",
                 "1.10.2-AOE",
                 "1.10.2-AOE-1.1.5",
                 "1.10.2-All the Mods",
@@ -134,13 +139,15 @@ public class VersionNumberTest {
                 "1.10.2-forge2511_bxztest",
                 "1.10.2-forge2511-simple_life_2",
                 "1.10.2-forge2511中文",
-                "1.12.2",
+                "1.10.2",
                 "1.12.2_Modern_Skyblock-3.4.2",
+                "1.12.2",
                 "1.13.1",
                 "1.99999999999999999999",
                 "2",
                 "2.0",
-                "2.1"));
+                "2.1"
+        );
 
         List<String> output = new ArrayList<>(input);
         output.sort(comparator);
